feat: cleanup unused code. fix active pane seperator color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,33 +82,9 @@ bind X kill-window
 bind x kill-pane
 bind Q confirm-before kill-server
 
-# pane borders
-# set -g pane-border-style fg=colour60
-# set -g pane-active-border-style fg=colour5
-
-# ----------------------
-# Status Bar
-# -----------------------
-
 # visual notification of activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
-
-# set color for status bar
-# set-option -g status-bg "#393956"
-# set-option -g status-fg white
-
-# set-window-option -g window-status-style fg=white
-
-# set-window-option -g window-status-current-format "#W"
-# set-window-option -g window-status-current-style fg=colour5,bright
-
-# set -g status-left "#[fg=#c6c469]#[bold]#S:#I:#P "
-
-# # show session name, window & pane number, date and time on right side of
-# # status bar
-# set -g status-right-length 60
-# set -g status-right "#[fg=#878fff]#(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=#7ae3e4]#(curl icanhazip.com) #[fg=#78d87d]%l:%M%p"
 
 set-option -g status-bg black
 set-option -g status-fg brightcyan
@@ -131,7 +107,7 @@ set -g status-style "bg=black"
 set -g status-fg white
 
 set -g pane-border-style 'fg=colour60'
-set -g pane-active-border-style fg=colour5
+set -g pane-active-border-style 'fg=cyan'
 
 #+------------+
 #+ Clock Mode +
