--- a/.tmux.conf
+++ b/.tmux.conf
@@ -106,8 +106,9 @@ set -g status-bg black
 set -g status-style "bg=black"
 set -g status-fg white
 
-set -g pane-border-style 'fg=colour60'
-set -g pane-active-border-style 'fg=cyan'
+set-option -g pane-border-style 'fg=brightblack'
+set-option -g pane-active-border-style 'fg=cyan'
+set-option -ag pane-active-border-style 'fg=cyan'
 
 #+------------+
 #+ Clock Mode +
