--- a/.tmux.conf
+++ b/.tmux.conf
@@ -100,6 +100,8 @@ set -g status on
 #+--------+
 #+--- Layout ---+
 set -g status-justify left
+set -g status-right-length 60
+set -g status-left-length 80
 
 #+--- Colors ---+
 set -g status-bg black
@@ -119,10 +121,10 @@ setw -g clock-mode-colour cyan
 #+ Status +
 #+--------+
 #+--- Bars ---+
-##set -g status-left "#[fg=black,bg=blue,bold] #S#[fg=blue,bg=black,nobold,noitalics,nounderscore]"
 set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=white,bg=brightblack,bold] #(curl icanhazip.com) #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] %H:%M "
+set -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=white,bg=brightblack,bold] #(curl icanhazip.com) #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=brightblack,bg=cyan,bold] %H:%M "
 
+# set -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=white,bg=brightblack,bold] #(curl icanhazip.com) #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]bharat "
 #+--- Windows ---+
 set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
 set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
