--- a/.tmux.conf
+++ b/.tmux.conf
@@ -126,6 +126,7 @@ set -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]
 
 # set -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=white,bg=brightblack,bold] #(curl icanhazip.com) #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]bharat "
 #+--- Windows ---+
+set -g window-status-activity-style ""
 set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
 set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
 set -g window-status-separator ""
