--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -413,7 +413,7 @@ key_bindings:
   - { key: K,      mods: Command, chars: "\x0c"            }
   - { key: V,      mods: Command, action: Paste            }
   - { key: C,      mods: Command, action: Copy             }
-  - { key: H,      mods: Command, action: Hide             }
+  - { key: H,      mods: Command|Control, action: Hide             }
   - { key: Q,      mods: Command, action: Quit             }
   - { key: W,      mods: Command, action: Quit             }
 
@@ -532,58 +532,58 @@ key_bindings:
   - { key: X,        mods: Command, chars: "\x1bx"                           }
   - { key: LBracket, mods: Command|Shift, chars: "\x1b{"                     }
   - { key: RBracket, mods: Command|Shift, chars: "\x1b}"                     }
-  - { key: A,         mods: Alt,       chars: "\x1ba"                        }
-  - { key: B,         mods: Alt,       chars: "\x1bb"                        }
-  - { key: C,         mods: Alt,       chars: "\x1bc"                        }
-  - { key: D,         mods: Alt,       chars: "\x1bd"                        }
-  - { key: E,         mods: Alt,       chars: "\x1be"                        }
-  - { key: F,         mods: Alt,       chars: "\x1bf"                        }
-  - { key: G,         mods: Alt,       chars: "\x1bg"                        }
-  - { key: H,         mods: Alt,       chars: "\x1bh"                        }
-  - { key: I,         mods: Alt,       chars: "\x1bi"                        }
-  - { key: J,         mods: Alt,       chars: "\x1bj"                        }
-  - { key: K,         mods: Alt,       chars: "\x1bk"                        }
-  - { key: L,         mods: Alt,       chars: "\x1bl"                        }
-  - { key: M,         mods: Alt,       chars: "\x1bm"                        }
-  - { key: N,         mods: Alt,       chars: "\x1bn"                        }
-  - { key: O,         mods: Alt,       chars: "\x1bo"                        }
-  - { key: P,         mods: Alt,       chars: "\x1bp"                        }
-  - { key: Q,         mods: Alt,       chars: "\x1bq"                        }
-  - { key: R,         mods: Alt,       chars: "\x1br"                        }
-  - { key: S,         mods: Alt,       chars: "\x1bs"                        }
-  - { key: T,         mods: Alt,       chars: "\x1bt"                        }
-  - { key: U,         mods: Alt,       chars: "\x1bu"                        }
-  - { key: V,         mods: Alt,       chars: "\x1bv"                        }
-  - { key: W,         mods: Alt,       chars: "\x1bw"                        }
-  - { key: X,         mods: Alt,       chars: "\x1bx"                        }
-  - { key: Y,         mods: Alt,       chars: "\x1by"                        }
-  - { key: Z,         mods: Alt,       chars: "\x1bz"                        }
-  - { key: A,         mods: Alt|Shift, chars: "\x1bA"                        }
-  - { key: B,         mods: Alt|Shift, chars: "\x1bB"                        }
-  - { key: C,         mods: Alt|Shift, chars: "\x1bC"                        }
-  - { key: D,         mods: Alt|Shift, chars: "\x1bD"                        }
-  - { key: E,         mods: Alt|Shift, chars: "\x1bE"                        }
-  - { key: F,         mods: Alt|Shift, chars: "\x1bF"                        }
-  - { key: G,         mods: Alt|Shift, chars: "\x1bG"                        }
-  - { key: H,         mods: Alt|Shift, chars: "\x1bH"                        }
-  - { key: I,         mods: Alt|Shift, chars: "\x1bI"                        }
-  - { key: J,         mods: Alt|Shift, chars: "\x1bJ"                        }
-  - { key: K,         mods: Alt|Shift, chars: "\x1bK"                        }
-  - { key: L,         mods: Alt|Shift, chars: "\x1bL"                        }
-  - { key: M,         mods: Alt|Shift, chars: "\x1bM"                        }
-  - { key: N,         mods: Alt|Shift, chars: "\x1bN"                        }
-  - { key: O,         mods: Alt|Shift, chars: "\x1bO"                        }
-  - { key: P,         mods: Alt|Shift, chars: "\x1bP"                        }
-  - { key: Q,         mods: Alt|Shift, chars: "\x1bQ"                        }
-  - { key: R,         mods: Alt|Shift, chars: "\x1bR"                        }
-  - { key: S,         mods: Alt|Shift, chars: "\x1bS"                        }
-  - { key: T,         mods: Alt|Shift, chars: "\x1bT"                        }
-  - { key: U,         mods: Alt|Shift, chars: "\x1bU"                        }
-  - { key: V,         mods: Alt|Shift, chars: "\x1bV"                        }
-  - { key: W,         mods: Alt|Shift, chars: "\x1bW"                        }
-  - { key: X,         mods: Alt|Shift, chars: "\x1bX"                        }
-  - { key: Y,         mods: Alt|Shift, chars: "\x1bY"                        }
-  - { key: Z,         mods: Alt|Shift, chars: "\x1bZ"                        }
+  - { key: A,         mods: Command,       chars: "\x1ba"                        }
+  - { key: B,         mods: Command,       chars: "\x1bb"                        }
+  - { key: C,         mods: Command,       chars: "\x1bc"                        }
+  - { key: D,         mods: Command,       chars: "\x1bd"                        }
+  - { key: E,         mods: Command,       chars: "\x1be"                        }
+  - { key: F,         mods: Command,       chars: "\x1bf"                        }
+  - { key: G,         mods: Command,       chars: "\x1bg"                        }
+  - { key: H,         mods: Command,       chars: "\x1bh"                        }
+  - { key: I,         mods: Command,       chars: "\x1bi"                        }
+  - { key: J,         mods: Command,       chars: "\x1bj"                        }
+  - { key: K,         mods: Command,       chars: "\x1bk"                        }
+  - { key: L,         mods: Command,       chars: "\x1bl"                        }
+  - { key: M,         mods: Command,       chars: "\x1bm"                        }
+  - { key: N,         mods: Command,       chars: "\x1bn"                        }
+  - { key: O,         mods: Command,       chars: "\x1bo"                        }
+  - { key: P,         mods: Command,       chars: "\x1bp"                        }
+  - { key: Q,         mods: Command,       chars: "\x1bq"                        }
+  - { key: R,         mods: Command,       chars: "\x1br"                        }
+  - { key: S,         mods: Command,       chars: "\x1bs"                        }
+  - { key: T,         mods: Command,       chars: "\x1bt"                        }
+  - { key: U,         mods: Command,       chars: "\x1bu"                        }
+  - { key: V,         mods: Command,       chars: "\x1bv"                        }
+  - { key: W,         mods: Command,       chars: "\x1bw"                        }
+  - { key: X,         mods: Command,       chars: "\x1bx"                        }
+  - { key: Y,         mods: Command,       chars: "\x1by"                        }
+  - { key: Z,         mods: Command,       chars: "\x1bz"                        }
+  - { key: A,         mods: Command|Shift, chars: "\x1bA"                        }
+  - { key: B,         mods: Command|Shift, chars: "\x1bB"                        }
+  - { key: C,         mods: Command|Shift, chars: "\x1bC"                        }
+  - { key: D,         mods: Command|Shift, chars: "\x1bD"                        }
+  - { key: E,         mods: Command|Shift, chars: "\x1bE"                        }
+  - { key: F,         mods: Command|Shift, chars: "\x1bF"                        }
+  - { key: G,         mods: Command|Shift, chars: "\x1bG"                        }
+  - { key: H,         mods: Command|Shift, chars: "\x1bH"                        }
+  - { key: I,         mods: Command|Shift, chars: "\x1bI"                        }
+  - { key: J,         mods: Command|Shift, chars: "\x1bJ"                        }
+  - { key: K,         mods: Command|Shift, chars: "\x1bK"                        }
+  - { key: L,         mods: Command|Shift, chars: "\x1bL"                        }
+  - { key: M,         mods: Command|Shift, chars: "\x1bM"                        }
+  - { key: N,         mods: Command|Shift, chars: "\x1bN"                        }
+  - { key: O,         mods: Command|Shift, chars: "\x1bO"                        }
+  - { key: P,         mods: Command|Shift, chars: "\x1bP"                        }
+  - { key: Q,         mods: Command|Shift, chars: "\x1bQ"                        }
+  - { key: R,         mods: Command|Shift, chars: "\x1bR"                        }
+  - { key: S,         mods: Command|Shift, chars: "\x1bS"                        }
+  - { key: T,         mods: Command|Shift, chars: "\x1bT"                        }
+  - { key: U,         mods: Command|Shift, chars: "\x1bU"                        }
+  - { key: V,         mods: Command|Shift, chars: "\x1bV"                        }
+  - { key: W,         mods: Command|Shift, chars: "\x1bW"                        }
+  - { key: X,         mods: Command|Shift, chars: "\x1bX"                        }
+  - { key: Y,         mods: Command|Shift, chars: "\x1bY"                        }
+  - { key: Z,         mods: Command|Shift, chars: "\x1bZ"                        }
   - { key: Key1,      mods: Alt,       chars: "\x1b1"                        }
   - { key: Key2,      mods: Alt,       chars: "\x1b2"                        }
   - { key: Key3,      mods: Alt,       chars: "\x1b3"                        }
