--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+set-option -g mouse on
 
 set-window-option -g mode-keys vi
 
