show directory as tmux window name

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,9 @@ set-window-option -g mode-keys vi
 set-option -g renumber-windows on
 
 # Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
+set-option -g automatic-rename on
+set-option -g allow-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 #set -g default-terminal screen-256color
 set -g status-keys vi
@@ -144,8 +145,6 @@ set -g @resurrect-restore 'R'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-
+bind-key -T copy-mode C-\ send-keys -X copy-pipe-and-cancel "pbcopy"
 set -g @resurrect-capture-pane-contents 'on'
 
