attach to tmux in alacritty. add binding to create new session in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,6 +78,8 @@ bind-key -r > swap-window -t +1
 
 bind = select-layout tiled
 
+bind C new
+
 # kill commands
 bind X kill-window
 bind x kill-pane
