update editor, update tmux option command

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,8 +95,8 @@ set-option -g status-fg brightcyan
 #+---------+
 #+ Options +
 #+---------+
-set -g status-interval 1
-set -g status on
+set-option -g status-interval 1
+set-option -g status on
 
 #+--------+
 #+ Status +
