--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,8 +57,8 @@ bind-key -r H resize-pane -L 5
 bind-key -r L resize-pane -R 5
 
 # move window
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind-key -n < swap-window -t -1
+bind-key -n > swap-window -t +1
 
 # Vim style pane selection
 bind h select-pane -L
