update tmux keybindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,11 +35,6 @@ set -g display-time 2000
 setw -g mode-keys vi
 setw -g monitor-activity on
 
-bind-key \ split-window -h
-bind-key - split-window -v
-unbind '"'
-unbind %
-
 # No delay for escape key press
 set-option -s escape-time 10
 # more repeat time so that resizing is easier
@@ -50,15 +45,17 @@ set -g display-panes-time 2000
 set -g base-index 1
 setw -g pane-base-index 1
 
+# split window
+bind-key \ split-window -h
+bind-key - split-window -v
+unbind '"'
+unbind %
+
 # resize panes
 bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
 bind-key -r H resize-pane -L 5
 bind-key -r L resize-pane -R 5
-
-# move window
-bind-key -n < swap-window -t -1
-bind-key -n > swap-window -t +1
 
 # Vim style pane selection
 bind h select-pane -L
@@ -66,6 +63,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# clear pane
 bind-key ! send-keys "clear" \; send-keys "Enter"
 
 # use tab to switch between pane
@@ -73,11 +71,14 @@ bind-key -r o select-pane -t :.+
 bind-key -r n next-window
 bind-key -r p previous-window
 
+# move window
 bind-key -r < swap-window -t -1
 bind-key -r > swap-window -t +1
 
+# balance panes
 bind = select-layout tiled
 
+# new window
 bind C new
 
 # kill commands
