add visual copy binding to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,6 +86,10 @@ bind X kill-window
 bind x kill-pane
 bind Q confirm-before kill-server
 
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
 # visual notification of activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
