--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -587,31 +587,32 @@ key_bindings:
   - { key: X,         mods: Command|Shift, chars: "\x1bX"                        }
   - { key: Y,         mods: Command|Shift, chars: "\x1bY"                        }
   - { key: Z,         mods: Command|Shift, chars: "\x1bZ"                        }
-  - { key: Key1,      mods: Alt,       chars: "\x1b1"                        }
-  - { key: Key2,      mods: Alt,       chars: "\x1b2"                        }
-  - { key: Key3,      mods: Alt,       chars: "\x1b3"                        }
-  - { key: Key4,      mods: Alt,       chars: "\x1b4"                        }
-  - { key: Key5,      mods: Alt,       chars: "\x1b5"                        }
-  - { key: Key6,      mods: Alt,       chars: "\x1b6"                        }
-  - { key: Key7,      mods: Alt,       chars: "\x1b7"                        }
-  - { key: Key8,      mods: Alt,       chars: "\x1b8"                        }
-  - { key: Key9,      mods: Alt,       chars: "\x1b9"                        }
-  - { key: Key0,      mods: Alt,       chars: "\x1b0"                        }
-  - { key: Space,     mods: Control,   chars: "\x00"                         } # Ctrl + Space
-  - { key: Grave,     mods: Alt,       chars: "\x1b`"                        } # Alt + `
-  - { key: Grave,     mods: Alt|Shift, chars: "\x1b~"                        } # Alt + ~
-  - { key: Period,    mods: Alt,       chars: "\x1b."                        } # Alt + .
-  - { key: Key8,      mods: Alt|Shift, chars: "\x1b*"                        } # Alt + *
-  - { key: Key3,      mods: Alt|Shift, chars: "\x1b#"                        } # Alt + #
-  - { key: Period,    mods: Alt|Shift, chars: "\x1b>"                        } # Alt + >
-  - { key: Comma,     mods: Alt|Shift, chars: "\x1b<"                        } # Alt + <
-  - { key: Minus,     mods: Alt|Shift, chars: "\x1b_"                        } # Alt + _
-  - { key: Key5,      mods: Alt|Shift, chars: "\x1b%"                        } # Alt + %
-  - { key: Key6,      mods: Alt|Shift, chars: "\x1b^"                        } # Alt + ^
-  - { key: Backslash, mods: Alt,       chars: "\x1b\\"                       } # Alt + \
-  - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                        } # Alt + |
-  - { key: Up,        mods: Command,   chars: "\x1b[1;5A"                    } # Alt + up
-  - { key: Down,      mods: Command,   chars: "\x1b[1;5B"                    } # Alt + down
+  - { key: Key1,      mods: Alt,           chars: "\x1b1"                        }
+  - { key: Key2,      mods: Alt,           chars: "\x1b2"                        }
+  - { key: Key3,      mods: Alt,           chars: "\x1b3"                        }
+  - { key: Key4,      mods: Alt,           chars: "\x1b4"                        }
+  - { key: Key5,      mods: Alt,           chars: "\x1b5"                        }
+  - { key: Key6,      mods: Alt,           chars: "\x1b6"                        }
+  - { key: Key7,      mods: Alt,           chars: "\x1b7"                        }
+  - { key: Key8,      mods: Alt,           chars: "\x1b8"                        }
+  - { key: Key9,      mods: Alt,           chars: "\x1b9"                        }
+  - { key: Key0,      mods: Alt,           chars: "\x1b0"                        }
+  - { key: Space,     mods: Control,       chars: "\x00"                         } # Ctrl + Space
+  - { key: Grave,     mods: Alt,           chars: "\x1b`"                        } # Alt + `
+  - { key: Grave,     mods: Alt|Shift,     chars: "\x1b~"                        } # Alt + ~
+  - { key: Period,    mods: Alt,           chars: "\x1b."                        } # Alt + .
+  - { key: Key8,      mods: Alt|Shift,     chars: "\x1b*"                        } # Alt + *
+  - { key: Key3,      mods: Alt|Shift,     chars: "\x1b#"                        } # Alt + #
+  - { key: Period,    mods: Alt|Shift,     chars: "\x1b>"                        } # Alt + >
+  - { key: Comma,     mods: Alt|Shift,     chars: "\x1b<"                        } # Alt + <
+  - { key: Minus,     mods: Alt|Shift,     chars: "\x1b_"                        } # Alt + _
+  - { key: Key5,      mods: Alt|Shift,     chars: "\x1b%"                        } # Alt + %
+  - { key: Key6,      mods: Alt|Shift,     chars: "\x1b^"                        } # Alt + ^
+  - { key: Backslash, mods: Alt,           chars: "\x1b\\"                       } # Alt + \
+  - { key: Backslash, mods: Alt|Shift,     chars: "\x1b|"                        } # Alt + |
+  - { key: Up,        mods: Command,       chars: "\x1b[1;5A"                    } # Alt + up
+  - { key: Down,      mods: Command,       chars: "\x1b[1;5B"                    } # Alt + down
+  - { key: Semicolon, mods: Command|Shift, chars: "\x1b:"                        } # Cmd + colon
   - { key: Key1, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "1"] } }
   - { key: Key2, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "2"] } }
   - { key: Key3, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "3"] } }
