--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,11 +3,8 @@ unbind-key C-b
 set -g prefix C-Space
 bind-key C-Space send-prefix
 
-# set -as terminal-overrides ":RGB"
-set -g default-terminal xterm-256color
-# set-option -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-# set-option -ga terminal-overrides ',*:Ss=\eE[%p1%d q:Se=\eE[2 q'
+set -g default-terminal "screen-24bit"
+# set -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc'
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
