--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -123,14 +123,9 @@ colors:
   primary:
     background: '0x2E3440'
     foreground: '0xD8DEE9'
-    dim_foreground: '0x9a9a9a'
-    bright_foreground: '0xffffff'
   cursor:
     text: '0x2E3440'
-    cursor: '0xEFF3F9'
-  selection:
-    text: '0xEAEAEA'
-    background: '0x404040'
+    cursor: '0xD8DEE9'
   normal:
     black: '0x3B4252'
     red: '0xBF616A'
@@ -245,8 +240,8 @@ shell:
   program: /usr/local/bin/zsh
   args:
     - --login
-    - -c
-    - 'tmux attach || tmux new -s main'
+    # - -c
+    # - 'tmux attach || tmux new -s main'
 
 working_directory: None
 
