use xterm-24bit instead of screen-24bit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,8 @@ unbind-key C-b
 set -g prefix C-Space
 bind-key C-Space send-prefix
 
-set -g default-terminal "screen-24bit"
-# set -g terminal-overrides ',xterm-256color:Tc,st-256color:Tc,xterm-termite:Tc,xterm-256color-italic:Tc'
+set -g default-terminal "xterm-24bit"
+set -g terminal-overrides ',xterm-24bit:Tc'
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
