--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -66,30 +66,28 @@ tabspaces: 8
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Fira Code
+    family: Meslo LG S DZ for Powerline
     # Style can be specified to pick a specific face.
     style: Regular
 
   # The bold font face
   bold:
-    family: Fira Code
+    family: Meslo LG S DZ for Powerline
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: Fira Code
+    family: Meslo LG S DZ for Powerline
     # Style can be specified to pick a specific face.
     style: Italic
 
   # Point size of the font
-  size: 14.0
+  size: 13.0
 
-  # Offset is the extra space around each character. offset.y can be thought of
-  # as modifying the linespacing, and offset.x as modifying the letter spacing.
-  offset:
-    x: 0
-    y: 0
+  # Offset is the extra space around each character. offset.y can be
+  # thought of as modifying the linespacing, and offset.x as modifying
+  # the letter spacing.  offset: x: 0 y: 0
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increase the x offset to move the glyph to
