--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,6 +86,7 @@ bind Q confirm-before kill-server
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi Enter send-keys -X copy-selection
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
@@ -149,6 +150,5 @@ set -g @resurrect-restore 'R'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-bind-key -T copy-mode C-\ send-keys -X copy-pipe-and-cancel "pbcopy"
 set -g @resurrect-capture-pane-contents 'on'
 
