--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -66,19 +66,19 @@ tabspaces: 8
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Meslo LG S DZ for Powerline
+    family: Meslo LG M DZ for Powerline
     # Style can be specified to pick a specific face.
     style: Regular
 
   # The bold font face
   bold:
-    family: Meslo LG S DZ for Powerline
+    family: Meslo LG M DZ for Powerline
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: Meslo LG S DZ for Powerline
+    family: Meslo LG M DZ for Powerline
     # Style can be specified to pick a specific face.
     style: Italic
 
