--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -66,24 +66,24 @@ tabspaces: 8
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Meslo LG M DZ for Powerline
+    family: Hasklug Nerd Font
     # Style can be specified to pick a specific face.
     style: Regular
 
   # The bold font face
   bold:
-    family: Meslo LG M DZ for Powerline
+    family: Hasklug Nerd Font
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: Meslo LG M DZ for Powerline
+    family: Hasklug Nerd Font
     # Style can be specified to pick a specific face.
     style: Italic
 
   # Point size of the font
-  size: 13.0
+  size: 14.0
 
   # Offset is the extra space around each character. offset.y can be
   # thought of as modifying the linespacing, and offset.x as modifying
@@ -94,7 +94,7 @@ font:
   # the right, increase the y offset to move the glyph upward.
   glyph_offset:
     x: 0
-    y: 0
+    y: 2
 
   # Scale the font size based on the monitor's DPI. This will lead to bigger text on HiDPI
   # screens and make reading text a little easier.
