--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -87,7 +87,10 @@ font:
 
   # Offset is the extra space around each character. offset.y can be
   # thought of as modifying the linespacing, and offset.x as modifying
-  # the letter spacing.  offset: x: 0 y: 0
+  # the letter spacing.
+  offset:
+    x: 0
+    y: 2
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increase the x offset to move the glyph to
