--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -66,21 +66,21 @@ tabspaces: 8
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Hasklug Nerd Font
+    family: OperatorMono Nerd Font
     # Style can be specified to pick a specific face.
-    style: Regular
+    style: Book
 
   # The bold font face
   bold:
-    family: Hasklug Nerd Font
+    family: OperatorMono Nerd Font
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: Hasklug Nerd Font
+    family: OperatorMono Nerd Font
     # Style can be specified to pick a specific face.
-    style: Italic
+    style: Book Italic
 
   # Point size of the font
   size: 14.0
