--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,8 +43,8 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # split window
-bind-key \ split-window -h
-bind-key - split-window -v
+bind-key \ split-window -h -c '#{pane_current_path}'
+bind-key - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
