increase refresh-interval. Show day and date in status-bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,6 @@ set-option -g renumber-windows on
 
 # Automatically set window title
 set-option -g automatic-rename on
-set-option -g allow-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 #set -g default-terminal screen-256color
@@ -98,7 +97,7 @@ set-option -g status-fg brightcyan
 #+---------+
 #+ Options +
 #+---------+
-set-option -g status-interval 1
+set-option -g status-interval 3
 set-option -g status on
 
 #+--------+
@@ -128,7 +127,7 @@ setw -g clock-mode-colour cyan
 #+--------+
 #+--- Bars ---+
 set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=white,bg=brightblack,bold] #(curl icanhazip.com) #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=brightblack,bg=cyan,bold] %H:%M "
+set -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=white,bg=brightblack,bold] #(curl icanhazip.com) #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=brightblack,bg=cyan,bold] %a %d-%m %l:%M %p "
 
 #+--- Windows ---+
 set -g window-status-activity-style ""
