` as tmux prefix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind-key C-b
 
-set -g prefix C-Space
-bind-key C-Space send-prefix
+set -g prefix `
+bind-key ` send-prefix
 
 set -g default-terminal "xterm-24bit"
 set -g terminal-overrides ',xterm-24bit:Tc'
@@ -42,7 +42,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # split window
-bind-key \ split-window -h -c '#{pane_current_path}'
+bind-key _ split-window -h -c '#{pane_current_path}'
 bind-key - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
