remove tmux resurrect and other plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,10 +82,7 @@ bind X kill-window
 bind x kill-pane
 bind Q confirm-before kill-server
 
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi Enter send-keys -X copy-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
@@ -97,8 +94,8 @@ set-option -g status-fg brightcyan
 #+---------+
 #+ Options +
 #+---------+
-set-option -g status-interval 3
 set-option -g status on
+set-option -g status-interval 5
 
 #+--------+
 #+ Status +
@@ -127,7 +124,7 @@ setw -g clock-mode-colour cyan
 #+--------+
 #+--- Bars ---+
 set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=white,bg=brightblack,bold] #(curl icanhazip.com) #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=brightblack,bg=cyan,bold] %a %d-%m %l:%M %p "
+set -g status-right "#{prefix_highlight} #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=white,bg=brightblack,bold] #(curl icanhazip.com) #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=brightblack,bg=cyan,bold] %a %d-%m %l:%M %p "
 
 #+--- Windows ---+
 set -g window-status-activity-style ""
@@ -135,18 +132,14 @@ set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounders
 set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
 set -g window-status-separator ""
 
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
-# enable continuum restore on server startup
-set -g @continuum-restore 'on'
-
-set -g @resurrect-save 'S'
-set -g @resurrect-restore 'R'
-
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=blue,bold'
+set -g @prefix_highlight_fg 'cyan'
+set -g @prefix_highlight_bg 'black'
+set -g @prefix_highlight_output_prefix '< '
+set -g @prefix_highlight_output_suffix ' >'
 run '~/.tmux/plugins/tpm/tpm'
-
-set -g @resurrect-capture-pane-contents 'on'
 
