--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind-key C-b
 
-set -g prefix `
-bind-key ` send-prefix
+set -g prefix C-s
+bind-key C-s send-prefix
 
 set -g default-terminal "xterm-24bit"
 set -g terminal-overrides ',xterm-24bit:Tc'
