--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -413,7 +413,7 @@ key_bindings:
   - { key: C,      mods: Command, action: Copy             }
   - { key: H,      mods: Command, action: Hide             }
   - { key: Q,      mods: Command, action: Quit             }
-  - { key: W,      mods: Command, action: Quit             }
+  # - { key: W,      mods: Command, action: Quit             }
 
   - { key: Paste,                   action: Paste                            }
   - { key: Copy,                    action: Copy                             }
