update alacrity, update cask packages, add idea settings and iterm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # split window
-bind-key \ split-window -h -c '#{pane_current_path}'
+bind-key \\ split-window -h -c '#{pane_current_path}'
 bind-key - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
