--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -53,7 +53,7 @@ scrolling:
   # scrolling for applications like `man`.
   #
   # To disable this completely, set `faux_multiplier` to 0.
-  faux_multiplier: 3
+  # faux_multiplier: 3
 
   # Automatically scroll to the bottom when new text is written
   # to the terminal.
@@ -611,6 +611,7 @@ key_bindings:
   - { key: Semicolon, mods: Command|Shift, chars: "\x1b:"                        } # Cmd + colon
   - { key: 36,        mods: Command,       chars: "\x1b\r"                       } # Alt + Enter
   - { key: Period,    mods: Command,       chars: "\x1b."                        } # Alt + .
+  - { key: Grave,     mods: Control,       chars: "|> "                          } # Ctrl + ` -> pipeline
   - { key: Key1, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "1"] } }
   - { key: Key2, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "2"] } }
   - { key: Key3, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "3"] } }
