change tmux kill keybinding. Fix nvim issue using two language servers for elixir

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,8 +78,8 @@ bind = select-layout tiled
 bind C new
 
 # kill commands
-bind X kill-window
-bind x kill-pane
+bind V kill-window
+bind v kill-pane
 bind Q confirm-before kill-server
 
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
