fix swap-window in tmux. change bd keybinging in vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,8 +68,8 @@ bind-key -r n next-window
 bind-key -r p previous-window
 
 # move window
-bind-key -r < swap-window -t -1
-bind-key -r > swap-window -t +1
+bind-key -r < swap-window -t -1\; select-window -t -1
+bind-key -r > swap-window -t +1\; select-window -t +1
 
 # balance panes
 bind = select-layout tiled
