--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  "typescript.validate.enable": false,
   "codeLens.enable": true,
   "suggest.noselect": false,
   "elixir.pathToElixirLS": "~/.local/bin/elixir-ls/release/language_server.sh",
