--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,8 +88,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 setw -g monitor-activity on
 set -g visual-activity on
 
-set-option -g status-bg black
-set-option -g status-fg brightcyan
+# set-option -g status-bg black
+# set-option -g status-fg brightcyan
 
 #+---------+
 #+ Options +
@@ -100,37 +100,56 @@ set-option -g status-interval 5
 #+--------+
 #+ Status +
 #+--------+
-#+--- Layout ---+
+##+--- Layout ---+
 set -g status-justify left
 set -g status-right-length 60
 set -g status-left-length 120
 
-#+--- Colors ---+
-set -g status-bg black
-set -g status-style "bg=black"
-set -g status-fg white
+##+------------+
+##+ Clock Mode +
+##+------------+
+#setw -g clock-mode-colour cyan
 
-set-option -g pane-border-style 'fg=brightblack'
-set-option -g pane-active-border-style 'fg=cyan'
-set-option -ag pane-active-border-style 'fg=cyan'
+##+--------+
+##+ Status +
+##+--------+
+##+--- Bars ---+
 
-#+------------+
-#+ Clock Mode +
-#+------------+
-setw -g clock-mode-colour cyan
 
-#+--------+
-#+ Status +
-#+--------+
-#+--- Bars ---+
-set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#{prefix_highlight} #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] #(ifconfig en0 | grep 'inet ' | awk '{print $2}') #[fg=white,bg=brightblack,bold] #(curl icanhazip.com) #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=brightblack,bg=cyan,bold] %a %d-%m %l:%M %p "
+background='#011627'
+inactiveBackground='#000c1d'
+foreground='#d6deeb'
+cursor='#7e57c2'
 
-#+--- Windows ---+
-set -g window-status-activity-style ""
-set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
-set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
-set -g window-status-separator ""
+# normal
+color0='#011627'
+color1='#ef5350'
+color2='#22da6e'
+color3='#addb67'
+color4='#82aaff'
+color5='#c792ea'
+color6='#21c7a8'
+color7='#ffffff'
+
+# bright
+color8='#575656'
+color9='#ef5350'
+color10='#22da6e'
+color11='#ffeb95'
+color12='#82aaff'
+color13='#c792ea'
+color14='#7fdbca'
+color15='#ffffff'
+
+set -g status-left "#[bg=${color0},fg=${color4},bold] #S "
+set -g status-style "bg=${color0}","fg=${color5}"
+set -g pane-border-style "fg=${color8}"
+set -g pane-active-border-style "fg=${color4}"
+set -g window-status-format "#I:#W"
+set -g window-status-separator ' '
+set -g window-status-style "bg=${color0}","fg=${color5}"
+set -g window-status-current-style "bg=${color0}","fg=${color2}"
+set -g status-right "#[fg=${color2}]%l:%M %p"
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
