updat resize pane keys. Update colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,11 +47,16 @@ bind-key - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
+unbind-key Left
+unbind-key Right
+unbind-key Down
+unbind-key Up
+
 # resize panes
-bind-key -r J resize-pane -D 5
-bind-key -r K resize-pane -U 5
-bind-key -r H resize-pane -L 5
-bind-key -r L resize-pane -R 5
+bind-key -r Down resize-pane -D 5
+bind-key -r Up resize-pane -U 5
+bind-key -r Left resize-pane -L 5
+bind-key -r Right resize-pane -R 5
 
 # Vim style pane selection
 bind h select-pane -L
@@ -143,12 +148,14 @@ color15='#ffffff'
 
 set -g status-left "#[bg=${color0},fg=${color4},bold] #S "
 set -g status-style "bg=${color0}","fg=${color5}"
-set -g pane-border-style "fg=${color8}"
-set -g pane-active-border-style "fg=${color4}"
+set -g pane-border-style "fg=${color4}"
+set -g pane-active-border-style "fg=${color6}"
 set -g window-status-format "#I:#W"
 set -g window-status-separator '  '
 set -g window-status-style "bg=${color0}","fg=${color5}"
 set -g window-status-current-style "bg=${color0}","fg=${color2}"
+set -g message-style "bg=${color4}","fg=${color0}"
+set -g message-command-style "bg=${color2}","fg=${color0}"
 set -g status-right "#[fg=${color2}]%l:%M %p"
 
 set -g @plugin 'tmux-plugins/tmux-yank'
