update tmux with more style

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -150,21 +150,22 @@ set -g status-left "#[bg=${color0},fg=${color4},bold] #S "
 set -g status-style "bg=${color0}","fg=${color5}"
 set -g pane-border-style "fg=${color4}"
 set -g pane-active-border-style "fg=${color6}"
+set -g mode-style "fg=${color0}","bg=${color5}"
 set -g window-status-format "#I:#W"
 set -g window-status-separator '  '
 set -g window-status-style "bg=${color0}","fg=${color5}"
 set -g window-status-current-style "bg=${color0}","fg=${color2}"
 set -g message-style "bg=${color4}","fg=${color0}"
 set -g message-command-style "bg=${color2}","fg=${color0}"
-set -g status-right "#[fg=${color2}]%l:%M %p"
+set -g status-right "#{prefix_highlight} #[fg=${color2}]%l:%M %p"
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=blue,bold'
-set -g @prefix_highlight_fg 'cyan'
-set -g @prefix_highlight_bg 'black'
+set -g @prefix_highlight_copy_mode_attr "fg=${color3},bg=${color0},bold"
+set -g @prefix_highlight_fg "${color3}"
+set -g @prefix_highlight_bg "${color0}"
 set -g @prefix_highlight_output_prefix '< '
 set -g @prefix_highlight_output_suffix ' >'
 run '~/.tmux/plugins/tpm/tpm'
