update tmux modeline bg color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -145,16 +145,17 @@ color12='#82aaff'
 color13='#c792ea'
 color14='#7fdbca'
 color15='#ffffff'
+color16='#282C35'
 
-set -g status-left "#[bg=${color0},fg=${color4},bold] #S "
-set -g status-style "bg=${color0}","fg=${color5}"
+set -g status-left "#[bg=${color16},fg=${color4},bold] #S "
+set -g status-style "bg=${color16}","fg=${color5}"
 set -g pane-border-style "fg=${color4}"
 set -g pane-active-border-style "fg=${color6}"
 set -g mode-style "fg=${color0}","bg=${color5}"
 set -g window-status-format "#I:#W"
 set -g window-status-separator '  '
-set -g window-status-style "bg=${color0}","fg=${color5}"
-set -g window-status-current-style "bg=${color0}","fg=${color2}"
+set -g window-status-style "bg=${color16}","fg=${color5}"
+set -g window-status-current-style "bg=${color16}","fg=${color2}"
 set -g message-style "bg=${color4}","fg=${color0}"
 set -g message-command-style "bg=${color2}","fg=${color0}"
 set -g status-right "#{prefix_highlight} #[fg=${color2}]%l:%M %p"
