--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -66,19 +66,19 @@ tabspaces: 8
 font:
   # The normal (roman) font face to use.
   normal:
-    family: OperatorMono Nerd Font
+    family: MonoLisa
     # Style can be specified to pick a specific face.
     style: Book
 
   # The bold font face
   bold:
-    family: OperatorMono Nerd Font
+    family: MonoLisa
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: OperatorMono Nerd Font
+    family: MonoLisa
     # Style can be specified to pick a specific face.
     style: Book Italic
 
