disable codelens, update rgignore, add alternate buffer binding

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,6 +1,9 @@
 {
-  "codeLens.enable": true,
+  "codeLens.enable": false,
   "suggest.noselect": false,
+  "diagnostic.messageTarget": "float",
+  "diagnostic.virtualText": true,
+  "diagnostic.level": "warning",
   "languageserver": {
     "bash": {
       "command": "bash-language-server",
