--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ unbind-key C-b
 set -g prefix `
 bind-key ` send-prefix
 
-set-option -g default-shell /usr/local/bin/fish
+set -g default-shell /usr/local/bin/fish
 
 set -g default-terminal "xterm-24bit"
 set -g terminal-overrides ',xterm-24bit:Tc'
