add tmux bindings to balance splits

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,8 @@ bind-key -r < swap-window -t -1\; select-window -t -1
 bind-key -r > swap-window -t +1\; select-window -t +1
 
 # balance panes
-bind = select-layout tiled
+bind = select-layout even-vertical
+bind + select-layout even-horizontal
 
 # new window
 bind C new
