--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -20,5 +20,7 @@
       "command": "~/.local/bin/elixir-ls/release/language_server.sh",
       "filetypes": ["elixir", "eelixir"]
     }
-  }
+  },
+  "emmet.showExpandedAbbreviation": "always",
+  "emmet.includeLanguages": { "javascript": "javascriptreact" }
 }
