update tmux modeline color and vim highlight line color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -148,7 +148,7 @@ color12='#82aaff'
 color13='#c792ea'
 color14='#7fdbca'
 color15='#ffffff'
-color16='#282C35'
+color16='#263147'
 
 set -g status-left "#[bg=${color16},fg=${color4},bold] #S "
 set -g status-style "bg=${color16}","fg=${color5},bold"
