--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -27,5 +27,6 @@
   "explorer.previewAction.onHover": false,
   "explorer.keyMappings": {
     "<cr>": ["expandable?", "expand", "open"]
-  }
+  },
+  "explorer.file.showHiddenFiles": true
 }
