--- a/.tmux.conf
+++ b/.tmux.conf
@@ -158,7 +158,7 @@ set -g mode-style "fg=${color0}","bg=${color5}"
 set -g window-status-format "#I:#W"
 set -g window-status-separator '  '
 set -g window-status-style "bg=${color16}","fg=${color5},bold"
-set -g window-status-current-style "bg=${color16}","fg=${color2},bold"
+set -g window-status-current-style "fg=${color16},bold","bg=${color4}"
 set -g message-style "bg=${color4}","fg=${color0}"
 set -g message-command-style "bg=${color2}","fg=${color0}"
 set -g status-right "#{prefix_highlight} #[fg=${color2},bold]%l:%M %p "
