remove neovide. add cocstatus to lightline

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -21,6 +21,7 @@
       "filetypes": ["elixir", "eelixir"]
     }
   },
+  "python.jediEnabled": false,
   "emmet.showExpandedAbbreviation": "always",
   "emmet.includeLanguages": { "javascript": "javascriptreact" },
   "explorer.width": 30,
