--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,13 @@ bind-key ` send-prefix
 
 set -g default-shell /usr/local/bin/fish
 
-set -g default-terminal "xterm-24bit"
-set -g terminal-overrides ',xterm-24bit:Tc'
+# set -g default-terminal "xterm-24bit"
+# set -ga terminal-overrides ',alacritty:RGB'
+# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
+
+set -g default-terminal "alacritty"
+set -ga terminal-overrides ",alacritty:Tc"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
